@@ -50,7 +50,6 @@ use Digest::SHA1;
 use Time::Local;
 use MIME::Parser;
 use Sys::Hostname;
-use Sys::Syslog;
 use File::Spec qw ();
 use Errno qw(ENOENT EACCES);
 
@@ -3325,7 +3324,7 @@ sub main {
 	# And print Perl module versions
 	print("\n");
 	my($version);
-	foreach $thing (qw(Archive::Zip Digest::SHA1 HTML::Parser IO::Socket MIME::Base64 MIME::Tools MIME::Words Mail::Mailer Mail::SpamAssassin Net::DNS Sys::Syslog )) {
+	foreach $thing (qw(Archive::Zip Digest::SHA1 HTML::Parser IO::Socket MIME::Base64 MIME::Tools MIME::Words Mail::Mailer Mail::SpamAssassin Net::DNS Unix::Syslog )) {
 	    unless (eval "require $thing") {
 		printf("%-30s: missing\n", $thing);
 		next;
